--- a/JobApplications/JobApplications.csproj
+++ b/JobApplications/JobApplications.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\Models\Enums\" />
+    <Folder Include="Data\Migrations\" />
   </ItemGroup>
 
 </Project>
