Trying to make Areas for Company

--- a/JobApplications/JobApplications.csproj
+++ b/JobApplications/JobApplications.csproj
@@ -24,8 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Company\Controllers\" />
-    <Folder Include="Areas\Company\Models\" />
+    <Folder Include="Areas\Company\Views\Company\" />
     <Folder Include="Data\Migrations\" />
     <Folder Include="Views\Application\" />
   </ItemGroup>
